# kaiak

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  test-with-provider.yml
.specify/history/: 001-kaiak-skeleton.md
.specify/memory/: constitution.md  context.md
.specify/templates/: spec-template.md  tasks-template.md
docs/: api-reference.md  goose_ide_compatibility.md
docs/api/: README.md
docs/developer/: README.md
docs/user-guide/: README.md
scripts/: ci.sh  lint.sh  test.sh
specs/001-kaiak-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agent-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agent-api-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-kaiak-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  toml-json-conversion-research.md
specs/005-client-notifications/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  logging.rs  main.rs
src/agent/: mod.rs  session_wrapper.rs
src/agents/: event_streaming.rs  mod.rs  session_wrapper.rs
src/cli/: commands.rs  mod.rs  utils.rs
src/client/: mod.rs  transport.rs
src/config/: mod.rs  security.rs  settings.rs  validation.rs
src/goose/: agent.rs  mod.rs  monitoring.rs  prompts.rs  resources.rs  (+1 more)
tests/: benchmarks.rs  streaming.rs  test_configure_endpoint.rs  test_delete_session_endpoint.rs  test_generate_fix_endpoint.rs
(+80 files in other folders)
