[package]
name = "kaiak"
version = "0.1.0"
edition = "2021"
authors = ["Kaiak Team"]
description = "Standalone server integrating Goose AI agent for code migration workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pranavgaikwad/kaiak"
readme = "README.md"
keywords = ["ai", "migration", "lsp", "goose", "code-assistant"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
goose = { git = "https://github.com/block/goose.git" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
toml = "0.8"
rustc_version = "0.4"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "kaiak"
path = "src/main.rs"